--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "postinstall": "chmod +x node_modules/.bin/astro || true"
   },
   "dependencies": {
     "@astrojs/check": "^0.5.1",
